Added main page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,7 +6,18 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+
+  
 }
+
+::-webkit-scrollbar {
+  display: none;
+}
+.example {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
 
 /* @media (prefers-color-scheme: dark) {
   :root {
@@ -15,13 +26,15 @@
     --background-end-rgb: 0, 0, 0;
   }
 } */
-/* 
+
 body {
-  color: rgb(var(--foreground-rgb));
+
+  
+  /* color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
     )
-    rgb(var(--background-start-rgb));
-} */
+    rgb(var(--background-start-rgb)); */
+}
