--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -62,6 +62,7 @@ font-family: 'Palmore_Bold';
 .palmore-light {
   font-family: 'Palmore_light';
 }
+
 /* @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
@@ -73,11 +74,11 @@ font-family: 'Palmore_Bold';
 body {
 
   
-  color: rgb(var(--foreground-rgb));
+  /* color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
     )
-    rgb(var(--background-start-rgb));
+    rgb(var(--background-start-rgb)); */
 }
